--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,143 @@
+@-moz-viewport { width: device-width; scale: 1; }
+@-ms-viewport { width: device-width; scale: 1; }
+@-o-viewport { width: device-width; scale: 1; }
+@-webkit-viewport { width: device-width; scale: 1; }
+@viewport { width: device-width; scale: 1; }
+
 html {
   box-sizing: border-box;
+  -moz-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
+  font: normal 100%/1.3 sans-serif;
+  background-color: #e2e2e2;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
+}
+
+body {
+  margin: 0;
+}
+
+.div-top {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+a {
+  text-decoration: none;
+  color: #fff;
+  background-color: #555;
+  border-radius: 4px;
+  padding: .5em .75em;
+}
+
+a:hover {
+  background-color: #000;
+}
+
+p {
+  margin: 0;
+}
+
+.bottom-padding {
+  padding-bottom: 2rem;
+}
+
+.img-flex {
+  display: block;
+  width: 100%;
+  max-width: 100%;
+  padding-top: 2rem;
+}
+
+@media only screen and (min-width: 25em) {
+
+  html {
+    font-size: 100%;
+    line-height: 1.3;
+  }
+
+  h1,
+  p {
+    margin: 0 0 1.3rem;
+  }
+
+  p {
+    margin: 0;
+  }
+
+  h1 {
+    padding-top: 1rem;
+  }
+
+}
+
+@media only screen and (min-width: 38em) {
+
+  html {
+    font-size: 110%;
+    line-height: 1.4;
+    background-color: #fff;
+  }
+
+  h1,
+  p {
+    margin: 0 0 1.4rem;
+  }
+
+  div {
+    display: inline-block;
+    max-width: 25em;
+    width: 50%;
+    vertical-align: middle;
+  }
+
+  section {
+    text-align: center;
+    background-color: #e2e2e2;
+    padding-bottom: 2rem;
+  }
+
+  .div-top {
+    max-width: 16em;
+    width: 50%;
+    padding-right: 1rem;
+    padding-left: 1rem;
+    text-align: left;
+  }
+
+  .bottom-padding {
+    padding-bottom: 0;
+  }
+
+  .cocoa {
+    margin-bottom: 0;
+  }
+
+}
+
+@media only screen and (min-width: 60em) {
+
+  html {
+    font-size: 120%;
+    line-height: 1.5;
+  }
+
+  h1,
+  p {
+    margin: 0 0 1.5rem;
+  }
+
+}
+
+@media only screen and (min-width: 90em) {
+
+  html {
+    font-size: 130%;
+  }
+
 }
